[UPD] Stile pulsanti sferici

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -7,3 +7,5 @@ $body-bg-color: #fff;
 $ombra-card: 0px 0px 15px 2px #000000;
 
 $ombra-bottone: 0px 0px 2px 2px #000000;
+
+$ombra-sfera: inset 0px 0px 30px 0px #000000, 0px 0px 30px 4px #000000;
